css/navbar.css
@import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@40,300,0,0&icon=menu, close');

nav {
    background-color: #2b2b2b;
    border-bottom: 1px solid #0d82cf;

    position: fixed;
    left: 0;
    top: 0;
    margin: 0;
    width: 100vw;

    text-align: center;
    z-index: 1000;
}

nav ul {
    list-style: none;
    display: flex;
    margin: 0;
    padding: 0;
}

nav li {
    display: flex;
    text-align: center;
}

nav .home-li {
    margin-right: auto;
}

nav a {
    display: flex;
    text-decoration: none;
    color: white;
    padding: 2vh 4vh;
    transition: background-color 150ms ease;
}

nav li.active {
    border-bottom: 2px solid #1860cc;
}

nav a:hover {
    background-color: #575757;
}

nav.show {
    right: 0;
}

#open-sidebar-button {
    display: none;
    background: none;
    border: none;
    padding: 1em;
    margin-left: auto;
    cursor: pointer;
}

#close-sidebar-button {
    display: none;
    background: none;
    border: none;
    padding: 1em;
    cursor: pointer;
}

@media screen and (max-width: 800px) {
    #open-sidebar-button, #close-sidebar-button {
        display: block;
    }

    nav {
        position: fixed;
        top: 0;
        right: -100%;
        height: 100vh;
        width: min(100vh, 100%);
        z-index: 10;
        border-left: 1px solid #575757;
        transition: right 300ms ease-out;
    }

    nav ul {
        width: 100%;
        flex-direction: column;
    }

    nav a {
        width: 100%;
        padding-left: 2.5em;
    }

    nav li.active {
        border-bottom: none;
    }

    nav .home-li {
        margin-right: unset;
    }
}

